# mpower-custom-app-example

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: multitech-gateway.mdc  python-coding-standards.mdc  testing-standards.mdc
docs/: api-reference.md  app-scripts.md  configuration.md  deployment.md  development.md  getting-started.md  index.md  plan-tls-firewall.md
mlinux-6/: build-tarball.sh  pyproject.toml
mlinux-6/src/webapi_example/: app.py  main.py  routes.py
mlinux-6/src/webapi_example/models/: __init__.py  config.py  data.py
mlinux-6/src/webapi_example/utils/: config_loader.py  logging_setup.py  status_writer.py
mlinux-7/: build-tarball.sh  pyproject.toml
mlinux-7/src/webapi_example/: __init__.py  __main__.py  app.py  main.py  routes.py  server.py
mlinux-7/src/webapi_example/models/: config.py  data.py
mlinux-7/src/webapi_example/utils/: __init__.py  config_loader.py  logging_setup.py  status_writer.py
tests/: __init__.py  conftest.py  test_models.py  test_routes.py
