[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webapi-example"
version = "1.0.0"
description = "Web API Example for mPower gateways"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "MultiTech Systems"}
]
dependencies = [
    "flask>=2.0.0",
]

[project.scripts]
webapi-example = "webapi_example.main:main"

[tool.setuptools.packages.find]
where = ["src"]
